importar componenete jinja

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -34,6 +34,7 @@
                 </div>
                 <button class="boton-registro-crear boton-registro">Crea una cuenta ahora</button>
                 <div class="boton-registro-already-register">
+                    {% include "navbar.html" %} <!-- Inserta la barra de navegación -->
                     <span>¿Ya tienes una cuenta? </span>
                     <a href="">Inicia sesión</a>
                 </div>
